--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,5 +38,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    example:
+    raw:
       +materialized: table
+      +database: DBT_LABS
+      +schema: RAW_SCHEMA
+      +query_tag: DBT2
+      +transient : false
+    silver:
+      +materialized: view
+      +database: DBT_LABS_SILVER
+
