--- a/models/raw/properties.yml
+++ b/models/raw/properties.yml
@@ -21,4 +21,24 @@ sources:
         identifier: PRODUCT
       - name: del
         identifier: DELIVERY_STATUS_FACT
+  - name: snowflake_dbt_data
+    database: SNOWFLAKE_DBT_DATA
+    schema: SF_SCHEMA
+    tables:
+      - name: TELECOM_CUSTOMERS_FRESHNESS
+        identifier: TELECOM_CUSTOMERS
+        freshness:
+          warn_after: {count: 1, period: day}
+          error_after: {count: 2, period: day}
+        loaded_at_field: registered_on
+      - name: telecom_customers_freshness2
+        identifier: TELECOM_CUSTOMERS
+        freshness: 
+          error_after:
+            count: 2
+            period: hour
+          warn_after:
+            count: 1
+            period: hour
+        loaded_at_field: "convert_timezone('UTC',registered_on)"
       
